fix(Tab): content panel collapsed in vertical mode

--- a/src/tab/main.scss
+++ b/src/tab/main.scss
@@ -211,6 +211,15 @@
         }
     }
 
+    &-wrapped:before, &-wrapped:after, {
+        content: "";
+        display: table;
+    }
+
+    &-wrapped:after {
+        clear: both;
+    }
+
     &-wrapped > #{$tab-prefix}-content {
         position: relative;
     }
